--- a/style.css
+++ b/style.css
@@ -559,6 +559,38 @@ footer {
     background-size: cover;
 }
 
+/* INSTRUCTIONS PAGE STYLES */
+
+.instruction-step {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    max-width: 800px;
+    margin: auto;
+    margin: 150px auto;
+}
+
+.instruction-step:first-child {
+    margin-top: 50px;
+}
+
+.instructions-arrow {
+    margin: 50px auto;
+    width: 50px;
+}
+
+.instructions-text {
+    font-size: 22px;
+    font-weight: 600;
+}
+
+.instructions-image {
+    border-radius: 15px;
+    max-width: 700px;
+}
+
 
 /* Media Queries */
 @media only screen and (max-width: 1024px) {
@@ -603,6 +635,23 @@ footer {
     .about {
         margin-top: 50px;
         margin-bottom: 50px;    
+    }
+
+    .instruction-step {
+        max-width: 90%;
+        margin: 80px auto;
+    }
+
+    .instructions-image {
+        max-width: 500px;
+    }
+
+    .instructions-text {
+        font-size: 20px;
+    }
+
+    .instructions-arrow {
+        width: 40px;
     }
 }
 
@@ -665,6 +714,10 @@ footer {
 
     .price {
         font-size: 36px;
+    }
+
+    .instructions-image {
+        max-width: 300px;
     }
 }
 
